--- a/_includes/sidebar-qrcode.html
+++ b/_includes/sidebar-qrcode.html
@@ -1,5 +1,5 @@
 {% if site.url contains 'sunbufu' %}
-<h3>欢迎加我微信</h3>
+<h3>欢迎关注公众号</h3>
 <img style="border:1px solid #dddddd;height:192px;width:192px" src="{{ site.url }}/assets/images/qrcode_wechat.jpg"
      alt="孙不服的微信"/>
 {% endif %}
