添加不蒜子访问统计

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,15 @@
             <li><a href="{{ site.url }}{{ site.subscribe_rss }}"><span class="octicon octicon-rss"
                                                                        style="color:orange;"></span></a></li>
         </ul>
-
+        <span id="busuanzi_container_site_pv">
+             本站总访问量<span id="busuanzi_value_site_pv"></span>次
+        </span>
+        <span id="busuanzi_container_site_uv">
+             本站访客数<span id="busuanzi_value_site_uv"></span>人次
+        </span>
+        <span id="busuanzi_container_page_pv">
+             本文总阅读量<span id="busuanzi_value_page_pv"></span>次
+        </span>
     </div>
 </footer>
 <div class="tools-wrapper">
@@ -34,6 +42,7 @@
 <script src="{{ site.url }}/assets/vendor/share.js/dist/js/share.min.js"></script>
 <script src="{{ site.url }}/assets/js/geopattern.js"></script>
 <script src="{{ site.url }}/assets/js/prism.js"></script>
+<script async src="https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 <link rel="stylesheet" href="{{ site.url }}/assets/css/globals/prism.css">
 <script>
     jQuery(document).ready(function ($) {
