--- a/_includes/header.html
+++ b/_includes/header.html
@@ -74,7 +74,7 @@
 <body class="{{ page.class }}" data-mz="{{ page.class }}">
 <header class="site-header">
     <div class="container">
-        <h1><a href="{{ site.url }}/" title="{{ site.title }}"><span class="octicon octicon-mark-github"></span> {{
+        <h1><a href="{{ site.url }}/" title="{{ site.title }}"><span class="octicon octicon-gist"></span> {{
             site.title }}</a></h1>
         <button class="collapsed mobile-visible" type="button" onclick="toggleMenu();">
             <span class="icon-bar"></span>
