--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,22 +21,29 @@
                    target="{{ nav.target | default: _self }}">{{ nav.label }}</a>
             </li>
             {% endfor %}
-            <li><a href="{{ site.url }}{{ site.subscribe_rss }}"><span class="octicon octicon-rss"
-                                                                       style="color:orange;"></span></a></li>
+            <li>
+                <a href="{{ site.url }}{{ site.subscribe_rss }}">
+                    <span class="octicon octicon-rss" style="color:orange;"/>
+                </a>
+            </li>
         </ul>
-        <span id="busuanzi_container_site_pv">
-             本站总访问量<span id="busuanzi_value_site_pv"></span>次
-        </span>
-        <span id="busuanzi_container_site_uv">
-             本站访客数<span id="busuanzi_value_site_uv"></span>人次
-        </span>
-        <span id="busuanzi_container_page_pv">
-             本文总阅读量<span id="busuanzi_value_page_pv"></span>次
-        </span>
+        <div class="left mobile-block">
+            <span id="busuanzi_container_site_pv">
+                 访问量&nbsp;<span id="busuanzi_value_site_pv"/>
+            </span>
+            <span id="busuanzi_container_site_uv">
+                 访客数&nbsp;<span id="busuanzi_value_site_uv"/>
+            </span>
+            <span id="busuanzi_container_page_pv">
+                 阅读量&nbsp;<span id="busuanzi_value_page_pv"/>
+            </span>
+        </div>
     </div>
 </footer>
 <div class="tools-wrapper">
-    <a class="gotop" href="#" title="回到顶部"><span class="octicon octicon-arrow-up"></span></a>
+    <a class="gotop" href="#" title="回到顶部">
+        <span class="octicon octicon-arrow-up"/>
+    </a>
 </div>
 <!-- / footer -->
 <script src="{{ site.url }}/assets/vendor/share.js/dist/js/share.min.js"></script>
