--- a/_includes/header.html
+++ b/_includes/header.html
@@ -98,5 +98,12 @@
             {% endfor %}
         </nav>
     </div>
+    <script>
+        $(function () {
+            var pattern = GeoPattern.generate('sunbufu' + Math.random(), {generator: "plaid"});
+            $('.home .site-header').css('background', pattern.toDataUrl());
+            $('.home .banner').css('background', pattern.toDataUrl());
+        });
+    </script>
 </header>
 <!-- / header -->
