--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -50,7 +50,7 @@
 <script src="{{ site.url }}/assets/vendor/share.js/dist/js/share.min.js"></script>
 <script src="{{ site.url }}/assets/js/geopattern.js"></script>
 <script src="{{ site.url }}/assets/js/prism.js"></script>
-<script src="{{ site.url }}/assets/js/jquery.fancybox.pack.js?v=2.1.5" type="text/javascript"></script>
+<script src="{{ site.url }}/assets/js/jquery.fancybox.pack.js" type="text/javascript"></script>
 <script async src="https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 <link rel="stylesheet" href="{{ site.url }}/assets/css/globals/prism.css">
 <script>
@@ -67,10 +67,11 @@
         });
     });
     // fancybox
-    $(".fancybox-image").fancybox({
-        openEffect: 'elastic',
-        closeEffect: 'elastic',
-        padding: 0,
+    $("a.fancybox-image").fancybox({
+        'openEffect': 'elastic',
+        'closeEffect': 'elastic',
+        'titleShow': false,
+        'padding': 0
     });
 </script>
 
