--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="{{ site.url }}/assets/vendor/share.js/dist/css/share.min.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/globals/responsive.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/posts/index.css">
-    <link rel="stylesheet" href="{{ site.url }}/assets/vendor/fancybox/jquery.fancybox.css?v=2.1.5" media="all" />
+    <link rel="stylesheet" href="{{ site.url }}/assets/vendor/fancybox/jquery.fancybox.css" media="all" />
     <!-- Latest compiled and minified CSS -->
     {% for css in page.css %}
     <link rel="stylesheet" href="{{ site.url }}/assets/css/{{css}}">
