--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -67,7 +67,7 @@
         });
     });
     // fancybox
-    $("a.fancybox-image").fancybox({
+    $(".fancybox-image").fancybox({
         'openEffect': 'elastic',
         'closeEffect': 'elastic',
         'titleShow': false,
