--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,8 @@
     <link rel="stylesheet" href="{{ site.url }}/assets/vendor/share.js/dist/css/share.min.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/globals/responsive.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/posts/index.css">
-    <link rel="stylesheet" href="{{ site.url }}/assets/vendor/fancybox/jquery.fancybox.css" media="all" />
+    <link rel="stylesheet" href="{{ site.url }}/assets/vendor/fancybox/jquery.fancybox.css" media="all"/>
+    <link rel="stylesheet" href="{{ site.url }}/assets/css/components/wechat-tip.css">
     <!-- Latest compiled and minified CSS -->
     {% for css in page.css %}
     <link rel="stylesheet" href="{{ site.url }}/assets/css/{{css}}">
@@ -81,11 +82,23 @@
     <meta name="application-name" content="sunbufu">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+
 </head>
 <body class="{{ page.class }}" data-mz="{{ page.class }}">
 <header class="site-header">
+    <!--浏览器打开提示-->
+    <div id='wechat-tip-box' style="display: none">
+        <div class="triangle_border_up">
+            <span></span>
+        </div>
+        <div class="wechat-tip">
+            <p>请点击右上角</p>
+            <p class="content">选择"浏览器中打开"</p>
+        </div>
+    </div>
     <div class="container">
-        <h1><a href="{{ site.url }}/" title="{{ site.title }}"><span class="octicon octicon-gist"></span> {{ site.title }}</a></h1>
+        <h1><a href="{{ site.url }}/" title="{{ site.title }}"><span class="octicon octicon-gist"></span> {{ site.title
+            }}</a></h1>
         <button class="collapsed mobile-visible" type="button" onclick="toggleMenu();">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -100,10 +113,28 @@
         </nav>
     </div>
     <script>
+        var on_wechat = (function () {
+            var ua = navigator.userAgent.toLowerCase();
+            if (ua.match(/MicroMessenger/i) == "micromessenger") {//微信浏览器
+                return true;
+            } else if (ua.match(/QQ/i) == "qq") {//qq浏览器
+                return true;
+            } else {
+                return false;
+            }
+        })();
         $(function () {
             var pattern = GeoPattern.generate('sunbufu' + Math.random(), {generator: "plaid"});
             $('.home .site-header').css('background', pattern.toDataUrl());
             $('.home .banner').css('background', pattern.toDataUrl());
+            // 判断并提示浏览器打开指引
+            //var winHeight = typeof window.innerHeight != 'undefined' ? window.innerHeight : document.documentElement.clientHeight;
+            var tip = $('#wechat-tip-box');
+            if (on_wechat) {
+                tip.style.display = 'block';
+            } else {
+                tip.style.display = 'none';
+            }
         });
     </script>
 </header>
