--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -134,5 +134,16 @@
     </script>
 </div>
 {% endif %}
+<script>
+    // 检测浏览器是否支持SW
+    if(navigator.serviceWorker != null){
+        navigator.serviceWorker.register('/service-worker.js')
+            .then(function(registartion){
+                console.log('支持sw:',registartion.scope)
+            })
+    } else {
+        console.log('不支持sw')
+    }
+</script>
 </body>
 </html>
