--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -135,14 +135,18 @@
 </div>
 {% endif %}
 <script>
-    // 检测浏览器是否支持SW
-    if(navigator.serviceWorker != null){
-        navigator.serviceWorker.register('/service-worker.js')
-            .then(function(registartion){
-                console.log('支持sw:',registartion.scope)
-            })
-    } else {
-        console.log('不支持sw')
+    // 首页打开sw
+    if("/" == '{{page.url}}'){
+        // 检测浏览器是否支持SW
+        if(navigator.serviceWorker != null){
+            var version = '{{site.time}}';
+            navigator.serviceWorker.register('/service-worker.js')
+                .then(function(registartion){
+                    console.log('支持sw:',registartion.scope)
+                })
+        } else {
+            console.log('不支持sw')
+        }
     }
 </script>
 </body>
