--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="{{ site.url }}/assets/css/globals/responsive.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/posts/index.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/vendor/fancybox/jquery.fancybox.css" media="all"/>
+    <link rel="stylesheet" href="{{ site.url }}/assets/css/globals/prism.css">
+    <link rel="stylesheet" href="{{ site.url }}/assets/vendor/js-sequence-diagrams/dist/sequence-diagram-min.css">
     <!-- Latest compiled and minified CSS -->
     {% for css in page.css %}
     <link rel="stylesheet" href="{{ site.url }}/assets/css/{{css}}">
